# NESPico

./: .gitmodules  CMakeLists.txt  README-pt-BR.md  README.md
include/: tusb_config.h
src/: nespico.c  pico_nes.c  usb_descriptors.c
